--- a/src/main/resources/templates/Common/header.html
+++ b/src/main/resources/templates/Common/header.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Insert title here</title>
-    <link rel="shortcut icon" href="#">
+    <link href="#" rel="shortcut icon">
     <link
+            crossorigin="anonymous"
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-            rel="stylesheet"
             integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-            crossorigin="anonymous">
+            rel="stylesheet">
 </head>
 <body>
 <div th:fragment="header">
@@ -19,12 +19,15 @@
                 <div class="p-2"><a th:href="@{/register}">
                     <button class="btn btn-primary">Register</button>
                 </a></div>
-                <div class="p-2">
-                    <button class="btn btn-primary">Logout</button>
+                <div class="p-2" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <form method="post" th:action="@{/logout}">
+                        <button class="btn btn-danger" type="submit">Logout</button>
+                    </form>
                 </div>
-                <div class="p-2"><a th:href="@{/login}">
-                    <button class="btn btn-primary">Login</button>
-                </a></div>
+                <div class="p-2" th:if="${!#authorization.expression('isAuthenticated()')}">
+                    <a th:href="@{/login}">
+                        <button class="btn btn-primary">Login</button>
+                    </a></div>
             </div>
         </div>
     </nav>
