--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -19,13 +19,20 @@
                 <div class="card border border-light-subtle rounded-3 shadow-sm">
                     <div class="card-body p-3 p-md-4 p-xl-5">
                         <h2 class="fs-6 fw-normal text-center text-secondary mb-4">Login to your account</h2>
-                        <form action="#!">
+                        <!-- Error message block -->
+                        <div th:if="${param.error}" class="alert alert-danger">
+                            Invalid username or password
+                        </div>
+                        <div th:if="${param.logout}" class="alert alert-success">
+                            You have been logged out
+                        </div>
+                        <form th:action="@{/login}" th:method="post">
                             <div class="row gy-2 overflow-hidden">
                                 <div class="col-12">
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="email" name="email"
-                                               placeholder="name@example.com" required type="email">
-                                        <label class="form-label" for="email">Email</label>
+                                        <input class="form-control" id="email" name="username"
+                                               placeholder="username" required type="text">
+                                        <label class="form-label" for="email">User name</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
